syntax="proto3";
package com.game.message.proto;

//任务信息
message TaskInfo
{
	required int32 id = 1;  // ID
	required int32 rate = 3; // 进度(-1为领取奖励)
}

// 请求任务列表
message OPTaskList
{
    optional int64 playerId = 1;
}

// 任务列表(请求返回)
message OPTaskListRet
{
    optional int64 playerId = 1;
	repeated TaskInfo taskList = 2;         // 任务列表
    repeated int32 activeReceivedList = 3;  // 活跃度已领取列表

}

// 领取任务奖励
message OPTaskReceive {
    optional int64 playerId = 1;
    optional int32 taskId = 2;//任务id
}

// 领取任务奖励返回 或 任务更新
message OPTaskReceiveRet
{
    optional int64 playerId = 1;
    repeated TaskInfo taskList = 2;    // 任务列表
}

// 领取活跃度奖励
message OPTaskActiveReceive {
    optional int64 playerId = 1;
    optional int32 activeId = 2;    // 活跃度id
}

// 领取活跃度奖励返回
message OPTaskActiveReceiveRet
{
    optional int64 playerId = 1;
    optional int32 activeId = 2;    // 活跃度id
}
